--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,8 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Log in!{% endblock %}
+{% use "bootstrap_5_layout.html.twig" %}
+	
 
 {% block body %}
+<main class="main-content ">
     <form method="post">
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -10,11 +13,17 @@
 
         {% if app.user %}
             <div class="mb-3">
-                You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+                You are logged in as {{ app.utilisateur.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
             </div>
         {% endif %}
+{% block main %} 
+        <div class="container body-container my-auto mx-auto">
+			        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+	
+			
+				<div class="row">
+					<div class="col-sm-12 position-relative justify-content-center">
 
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
         <label for="username">Email</label>
         <input type="email" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="email" required autofocus>
         <label for="password">Password</label>
@@ -39,4 +48,9 @@
             Sign in
         </button>
     </form>
+    </div>
+    </div>
+    </div>
+    </main>
+{% endblock %}
 {% endblock %}
