--- a/templates/_partials/_nav.html.twig
+++ b/templates/_partials/_nav.html.twig
@@ -26,6 +26,9 @@
       <div class="navlinks-container col-md-6 d-flex justify-content-center vertical-align-middle ">
 
                 <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_accueil') }}">Accueil</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{{ path('app_plat') }}">Plats</a>
                 </li>
                 <li class="nav-item">
