--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -3,19 +3,27 @@
 {% block title %}Formulaire de contact{% endblock %} 
 {% block body %}
 
-<main class"main-content">
-<div class="container d-block position-relative justify-content-center text-center mx-auto h-60 w-40 ">
+    
+{% use "bootstrap_5_layout.html.twig" %}
+
+
+{% block main %} 
+	<main class="main-content ">
+        <div class="container body-container my-auto mx-auto">
+			        <h1 class="h3 mb-3 font-weight-normal">Contact</h1>
+	
+			
+				<div class="row">
+					<div class="col-sm-12 position-relative justify-content-center">
 
    <h1>Formulaire de contact</h1>
 
 
 
-    {# {% for flash_error in app.flashes('verify_email_error') %}
+    {% for flash_error in app.flashes('verify_email_error') %}
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
-    {% endfor %} #}
+    {% endfor %}
 
-    
-{% use "bootstrap_5_layout.html.twig" %}
 
 
      {{ form_start(form) }}
@@ -44,8 +52,10 @@
 
 
     {{ form_end(form) }}
-</div>
-</main>
+<{% endblock %}
+ </div>
+        </div>
+        </main>
 
 
 
