--- a/templates/_partials/_footer.html.twig
+++ b/templates/_partials/_footer.html.twig
@@ -1,5 +1,45 @@
 <footer class="container-fluid position-fixed bottom:0">
-	<div class="row">
+  <p class="pull-right p-4 "><a href="#">Revenir en haut ▲</a></p>
+  <div class="container-fluid ">
+    <div class="row">
+
+
+
+
+
+      <div class="col-md-3">
+        <h3 class="h3">A propos</h3>
+        <ul >
+          <li><a href="#">Historique</a></li>
+          <li><a href="#">Service clients</a></li>
+
+        </ul>
+      </div>
+      <div class="col-md-3">
+        <h3 class="h3">Partners</h3>
+        <ul>
+
+          <li><a href="#">MIO</a></li>
+
+        </ul>
+      </div>
+      <div class="col-md-3">
+        <h3 class="h3">Service clents</h3>
+        <ul>
+          <li><a href="#">Chat</a></li>
+          <li><a href="#">03 22 453 352</a></li>
+
+        </ul>
+      </div>
+      <div class="col-md-3">
+        <h3 class="h3">Socials</h3>
+        <ul >
+          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+          <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+        </ul>
+      </div>
+	{# <div class="row">
 		<section class="col">
 			Colonne 1
 		</section>
@@ -9,5 +49,5 @@
 		<section class="col">
 			Colonne 3
 		</section>
-	</div>
+	</div> #}
 </footer>
