--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,7 +39,7 @@ footer {
     margin-top: 20vh; 
     margin-bottom: 20vh;
   
-    height: 100%;
+    height: 100vh;
   
     
   }
@@ -57,6 +57,24 @@ footer {
   
   }
 
+    
+  #slider {
+  
+    top:0;
+    z-index: 0;
+   width: auto;
+   
+  }
+  .slider-container {
+    position: relative;
+    margin-left:0;
+    margin-right: 0;
+    top: 0;
+    min-width: 100vw;
+    height: 15vh;
+   overflow: hidden;
+    z-index: 0;
+  } 
 
   nav {
   position: fixed;
@@ -72,15 +90,14 @@ footer {
   
   }
   
-.nav-item {
+.nav-item  {
   list-style: none;
   text-decoration: none;    
 }
 
-li a .nav-item {
-   
-    font-size: 20px;
-    color: #bcc8df;
+li  {
+  list-style: none;
+  text-decoration: none;    
 }
 
 .nav-icon .logo {
@@ -102,14 +119,89 @@ li a .nav-item {
   
     z-index: 10;
   }
- .navlinks-container a {
+
+.navlinks-container a {
+    display: flex;
+    margin: 0 10px;
+    font-size: 22px;
+    font-weight: 600;
+    vertical-align: middle;
+  
+    color: #c6ccd6;
+    text-shadow: solid 4px #d9d9de;
+    position: relative;
+  }
+  
+  
+  .navlinks-container a::before {
+    display: flex;
+    position: relative;
+    margin: 0 10px;
+    width: 60%;
+    color: #657075;
+    font-size: 25px;
+    font-weight: 800;
+    justify-content: center;
+    vertical-align: middle;
+    color: #69717ecd;
+    text-shadow: solid 4px #cdcdd4;
+    z-index: 1000;
+  }
+  
+  .navlinks-container a::after {
+    content: "";
+    display: block;
+    position: absolute;
+    margin: 0 10px;
+    bottom: -3px;
+    width: 100%;
+    height: 1px;
+    color: #3391b3;
+    transform: scale(0);
+    transform-origin: left;
+    background: #ccc4c462;
+    transition: transform 0.3s ease-out;
+    z-index: 1000;
+  }
+  
+  .navlinks-container a:hover::after {
+    transform: scaleX(1);
+  }
+  
+  .nav-authentication {
+    display: flex;
+    vertical-align: middle;
+    min-width: 23vh;
+  
+    justify-content: space-around;
+    color: #f0f5f6;
+    order: 3;
+  }
+  
+  
+  
+  .user-toggler {
+  
+    width: 20px;
+  
+  
+  }
+  
+  h2,
+  h3 {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  
+  }
+
+  
+ /* .navlinks-container a {
   display: flex;
   margin: 0 10px;
-  font-size: 22px;
-  font-weight: 1000;
+  font-size: 17px;
+  font-weight: 1500;
   vertical-align: middle;
   text-decoration: none;
-  color: #7c95c5;
+  color: #c6cad3;
   text-shadow: solid 4px  #d9d9de;
   position: relative;
   }
@@ -132,12 +224,12 @@ li a .nav-item {
   position: absolute;
   margin: 0 10px;
   bottom: -3px;
-  width: 100%;
+  width: 30%;
   height: 1px;
-  color: #3391b3;
+  color: #b7cdd4;
   transform: scale(0);
   transform-origin: left;
-  background: #a5969662;
+  background: #a59696b0;
   transition: transform 0.3s ease-out;
   }
   .navlinks-container a:hover::after {
@@ -168,7 +260,7 @@ h2, h3 {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #e6e3e3;
   }
-  
+   */
 /* form {
  
     justify-content: center;
