--- a/templates/_partials/_nav.html.twig
+++ b/templates/_partials/_nav.html.twig
@@ -2,7 +2,11 @@
     {# <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" #}
 
 {% block stylesheets %}	
-<link rel="stylesheet" href="{{ asset('css/demo.css')}}">
+<link rel="stylesheet" href="{{ asset('css/style.css')}}">
+    <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
+
+  <link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
 	{% endblock %}
 
 <header>
@@ -23,7 +27,7 @@
           </button>
 
       </div>
-      <div class="navlinks-container col-md-6 d-flex justify-content-center vertical-align-middle ">
+      <div class="navlinks-container col-md-6 d-flex justify-content-center justify-items-center vertical-align-middle ">
 
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('app_accueil') }}">Accueil</a>
@@ -61,7 +65,7 @@
           <i class="fa fa-sign-in" aria-hidden="true"></i></a> 
          </div>
 
-     
+       <div id="search">
           <form  class="search" action="results.php" method="GET" accept-charset="utf-8">
           <input type="text" name="input" class="input" placeholder="Search" />
           <button type="reset" class="search " id="search-button">
@@ -69,9 +73,10 @@
        
         </button>
         </div>
+        </div>
     </nav>
 
-  </header>
+
 
 
 
@@ -83,7 +88,7 @@
     <img src="image/bg3.jpeg" alt="Image 4" />
 </div>
 </div>
-
+  </header>
 {% block javascripts %}
      <script src="js/flux.min.js"></script>
  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -101,11 +106,15 @@
     });
 
 </script>
+<script src="js/toggle.js"></script> 
+<script src="js/accordion.js"></script> 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+{# <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script><<<<< #}
 	{% endblock %}
 
 
 
 
-<script src="js/toggle.js"></script> 
+
 
 
