--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -136,6 +136,8 @@
 {% endblock %}
 		{% block footer %}
 			<footer>
+						 {{ include('_partials/_footer.html.twig')}}          
+
 				<div class="container">
 					<div class="row">
 						<div id="footer-copyright" class="col-md-6">
