--- a/templates/contact/mail.html.twig
+++ b/templates/contact/mail.html.twig
@@ -1,9 +1,7 @@
-<img src="{{asset ('img/images_the_district/the_district_brand/logo.png')}}"class=" img-brand d-none d-md-flex  col-10">
+<img src="{{ asset ('image/images_the_district/logo.png')}}" class="img d-none d-md-flex  col-10 ">
 
-
-<div class='container'>
-
-    <div class='row mt-5'>
+<div class="container">
+    <div class="row mt-5">
         <div class='col-sm-8 offset-sm-2'>
         <h1 class='justify-content-center d-flex'>Informations Perso du Client</h1>
 <table class ='table table-light table-hover mt-5'>
@@ -28,7 +26,7 @@
 </div>
 
 
-<div class="demande">
-<h5>La demande Du client :</h5>
-<h6>{{data_mail.Demande}}</h6>
+<div class="Objet">
+<h5>Objet de la demande :</h5>
+<h6>{{data_mail.Objet}}</h6>
 </div>
