--- a/templates/menu/categorie.html.twig
+++ b/templates/menu/categorie.html.twig
@@ -182,7 +182,7 @@
   
 </style>
 
-  <div class="container position-relative m-0  p-0 justify-content-center ">
+  <div class="container-fluid col-sm-8 col-md-6 position-relative m-0  p-0 justify-content-center ">
   <section class="js-horizontal-collapse horizontal-collapse " data-item-min-width="140" data-item-max-width="290" data-item-min-height="600" data-item-max-height="600">
     <ul class="horizontal-collapse__inner">
       {% for categorie in categories %}
