--- a/templates/profile/profile.html.twig
+++ b/templates/profile/profile.html.twig
@@ -1,47 +1,71 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}The District Votre Profile !{% endblock %}
-
 {% block body %}
-<div class="container" id="mentions" >
+
+{% use "bootstrap_5_layout.html.twig" %}
+
+{% block main %} 
+	<main class="main-content ">
+{# <div class="container-fluid d-block col-md-6 col-sm-12 position-relative justify-item-center justify-content-between "> #}
+	
 <h1>Connexion/Inscription</h1>
-</div>
+	
 
-<div class="container d-flex justify-content-around mt-5 mb-5">
-
+<div class="container d-block justify-content-around mt-5 mb-5 ">
+		<div class="row">
+ {% for flash_error in app.flashes('verify_email_error') %}
+        <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
+    {% endfor %}
+       {% if app.user %}
+<div class="col-3 justify-content-center mb-3 ">
+           <strong> Vous êtes connectez: {{ app.user.userIdentifier }}</strong>
+   </div>
+    {% endif %}
 {% if not app.user %}
-    <div class="card  col-3">
+    <div class="card  d-block justify-content-between col-3 m-2">
         <h3>Connexion</h3>
             <div class="card-body">
-            <p>Vous avez deja un compte connectez vous des maintenant !!!</p>
+            <p>Vous avez deja un compte connectez vous</p>
             <a href="{{path ('app_login')}}" class="btn btn-link d-flex justify-content-center" type="button">Se Connecter</a>
             </div>
-    </div>
+            </div>
 
-    <div class="card col-3">
+        {% endif %}
+
+    {% if app.user %}
+    <div class="card  d-block justify-content-around col-3 ">
         <h3>Inscription</h3>
             <div class="card-body">
                 <p>Vous n'avez toujours pas de compte pour en cree un c'est juste ici !!!</p>
                 <a href="{{path ('app_register')}}" class="btn btn-link d-flex justify-content-center" type="button">S'inscrire</a>
             </div>
-    </div>
+   </div>
+   
     {% endif %}
-{% if app.user %}
-    
+
+       {% if app.user %}
     <div class="card col-3">
         <h3>votre profil</h3>
             <div class="card-body">
             <p>Pour voir votre profil est vos informations/commande  c'est juste ici !!!</p>
             <a href="{{path ('app_detail_profile')}}" class="btn btn-link d-flex justify-content-center" type="button">voir Profile</a>
             </div>
-    </div>
+            </div>
+ 
 {% endif %}
-</div>
 
-{% if  app.user%}
+
+{% if app.user %}
 
 <div class="logout d-flex justify-content-center">
-<a  href="{{path ('app_logout')}}"class="btn btn-link">Se Deconnecter</a>
+<stron><a href="{{path ('app_logout')}}"class="btn btn-link">Se Deconnecter</a></strong>
 </div>
 {% endif %}
+   </div>
+</div>
+
+
+</main>
+{% endblock %}
 {% endblock %}
