--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -55,7 +55,7 @@
         </button>
     </form>
     <div class="text mt-5 mb-3">
-<p>Pas encore inscript cest ici </p> 
+<strong>Pas encore inscrit cliquez sur ce lien-> </strong> 
  <a href="{{path ('app_register')}}" class="btn btn-link d-block justify-content-center">S'inscrire</a>
 </div>
     </div>
