--- a/templates/_partials/_nav.html.twig
+++ b/templates/_partials/_nav.html.twig
@@ -1,15 +1,16 @@
 
-    {# <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" #}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
 
 {% block stylesheets %}	
-<link rel="stylesheet" href="{{ asset('css/style.css')}}">
-    <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
 
-  <link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
+ <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'> 
+<link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
+
+<link rel="stylesheet" href="{{ asset('css/style.css')}}">
 	{% endblock %}
 
-<header>
+
 
  <nav>
 
@@ -18,7 +19,7 @@
 
       </a>
 
-      <div class="main-navlinks">
+      <div class="main-navlinks align-items-top">
         <bouton type="button" class=" toggle menu-markdown" aria-label="Toggle Navigation" aria-expanded="false">
           <span></span>
           <span></span>
@@ -27,7 +28,7 @@
           </button>
 
       </div>
-      <div class="navlinks-container col-md-6 d-flex justify-content-center justify-items-center vertical-align-middle ">
+      <div class="navlinks-container col-sm-4 col-md-3 mx-auto d-flex m-0 justify-content-around justify-items-center vertical-align-middle ">
 
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('app_accueil') }}">Accueil</a>
@@ -47,19 +48,19 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('app_register') }}">S'enregistrer</a>
                 </li>
-                <li class="nav-item">
+                {# <li class="nav-item">
                     <a class="nav-link" href="{{ path('app_logout') }}">Déconnecter</a>
-                </li>
+                </li> #}
                 
           
       </div>
 
-<div class="nav-authentication">
+<div class="nav-authentication d-flex col-md-2 col-sm-3 ">
 <div class="shopping d-flex " >
-      <a href="#">  <i class="fa fa-shopping-cart red "></i> <span class="badge badge-red">0</span></a>
+     <a href="#" class=>  <i class="fa fa-shopping-cart red "></i> <span class="badge badge-red">0</span></a>
        
 </div>
-<div class="sign-btns  ">    <a href="SignIn.html"> 
+<div class="sign-btns  ">    <a href="{{ path('app_profile') }}"> 
   <img src="image/user.svg" class="user-toggler" aria-label="Sign in page" alt="user icon">
         
           <i class="fa fa-sign-in" aria-hidden="true"></i></a> 
@@ -74,13 +75,12 @@
         </button>
         </div>
         </div>
-    </nav>
+  
+ </nav>
 
 
 
-
-
-  <div class="slider-container col-12 w-100 top-0 m-0 p-0">
+  <div class="slider-container w-100 top-0 m-0 p-0">
   <div id="slider">
     <img src="image/bg.jpg" alt="Image 1" />
     <img src="image/bg1.jpeg" alt="Image 2" />
@@ -88,9 +88,12 @@
     <img src="image/bg3.jpeg" alt="Image 4" />
 </div>
 </div>
-  </header>
+ 
+
 {% block javascripts %}
      <script src="js/flux.min.js"></script>
+     {# <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> #}
+
  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
  
   
@@ -106,9 +109,9 @@
     });
 
 </script>
+
 <script src="js/toggle.js"></script> 
 <script src="js/accordion.js"></script> 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 {# <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script><<<<< #}
 	{% endblock %}
 
