--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,14 +11,14 @@
 		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
 
 
-		{# <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+{# <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
 								  integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-								  crossorigin="anonymous"></script> #}
+								  crossorigin="anonymous"></script>  #}
 								  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
 								          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	
 
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> 
+{# <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">  #}
 
           		{# {{ encore_entry_link_tags('main') }}   #}
 				{# {{% import (app) %}} #}
@@ -29,7 +29,7 @@
                     
 			{% block javascripts %}
 					<script src="{{ asset('/js/bootstrap.bundle.min.js') }}" defer></script> 
-            		 {{ encore_entry_script_tags('main') }}                     
+            		 {# {{ encore_entry_script_tags('main') }}                      #}
 
 		{% endblock %}
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
@@ -37,13 +37,12 @@
 	<link rel="shortcut icon" type="image/svg+xml" href="{{ asset('favicon.svg') }}"> 
    </head>
 
-
+	
 	
 
 		{% block header %}
-   
+   {# <header class="container-fluid col-xs-12 col-sm-12 col-md-6 col-lg-4"> #}
 			{# {% set _route = app.request.get('route') %} #}
-			{{ include('_partials/_flash.html.twig') }} 
 			 {{ include('_partials/_nav.html.twig')}}          
 
 									{# <li class="nav-item{{ _route == '_partials' ? ' active' : '' }}">
@@ -98,29 +97,34 @@
 						</div>
 					</div>
 				</nav> #}
-     
+   {# </header>   #}
 
 {% endblock %}
 
 
-	<body>
 
+<body>
 {% block body %}
 
-			<div class="container body-container">
+
+			{{ include('_partials/_flash.html.twig') }} 
+
+			{# <div class="container body-container"> #}
 				{% block main %} 
-				<main class="main-content">
-				<div class="row">
-					<div class="col-sm-9">
+						<main class="main-content">
+				<div class="container-fluid col-sm-12 col-md-6 col-lg-4">
+		
+				{# <div class="row">
+					<div class="col-sm-9"> #}
 						
                       
 
-</div>
-</div>
-</main>
+{# </div>
+</div> #}
 
-					
-		{% endblock %}			
+</div>
+
+	</main>	
 					{# <div id="sidebar" class="col-sm-3">
 						{% block sidebar %}
 							{{ render_esi(controller('Symfony\\Bundle\\FrameworkBundle\\Controller\\TemplateController::templateAction', {
@@ -129,9 +133,9 @@
                                                                                 '_locale': app.request.locale
                                                                       })) }}
 						{% endblock %} 
-					</div>
-				</div> #}
-			{# {% endblock %} #}
+					</div> #}
+				
+			{% endblock %}
 		
 {% endblock %}
 		{% block footer %}
@@ -160,9 +164,9 @@
 				</div>
 			</footer>
 
-		{% endblock %}
-  
 	
+  
+	{% endblock %}
   </body>
 </html>
 
