--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -4,25 +4,29 @@
 {% block body %}
 
     
-{% use "bootstrap_5_layout.html.twig" %}
+
 
 
 {% block main %} 
-	<main class="main-content ">
-        <div class="container body-container my-auto mx-auto">
-			        <h1 class="h3 mb-3 font-weight-normal">Contact</h1>
-	
+{% use "bootstrap_5_layout.html.twig" %}
+			<div class="container body-container position-relative justify-content-center my-auto mx-auto">
+				
 			
 				<div class="row">
-					<div class="col-sm-12 position-relative justify-content-center">
+					<div class="col-sm-12 ">
+
+   
+ {% for flash_error in app.flashes('verify_email_error') %}
+        <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
+    {% endfor %}
 
    <h1>Formulaire de contact</h1>
 
 
 
-    {% for flash_error in app.flashes('verify_email_error') %}
+    {# {% for flash_error in app.flashes('verify_email_error') %}
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
-    {% endfor %}
+    {% endfor %} #}
 
 
 
@@ -32,6 +36,21 @@
 </div> 
 
 <div class="row d-block">
+<div class="col-9 mx-auto mt-4">
+    {{ form_label(form.nom, "Nom" ) }}
+    {{ form_widget(form.nom, {'attr': {'class': 'btn-light'} }) }}
+    {{ form_errors(form.nom) }}
+</div>
+<div class="col-9 mx-auto mt-4">
+    {{ form_label(form.prenom, "Prenom" ) }}
+    {{ form_widget(form.prenom, {'attr': {'class': 'btn-light'} }) }}
+    {{ form_errors(form.prenom) }}
+</div>
+<div class="col-9 mx-auto mt-4">
+    {{ form_label(form.telephone, "Téléphone" ) }}
+    {{ form_widget(form.telephone, {'attr': {'class': 'btn-light'} }) }}
+    {{ form_errors(form.telephone) }}
+</div>
 <div class="col-9 mx-auto mt-4">
     {{ form_label(form.objet, "Objet" ) }}
     {{ form_widget(form.objet, {'attr': {'class': 'btn-light'} }) }}
@@ -52,7 +71,7 @@
 
 
     {{ form_end(form) }}
-<{% endblock %}
+{% endblock %}
  </div>
         </div>
         </main>
